[package]
name = "project"
version = "0.1.0"
authors = ["SamGinzburg <ginzburg.sam@gmail.com>", "Benjamin Kuykendall <brk@princeton.edu>"]

[lib]
name = "sharedlib"
path = "src/lib/lib.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
clap = "2.32.0"
cursive = "0.11"
rand = "0.6.5"
openssl = "0.10.20"
