[package]
name = "project"
version = "0.1.0"
edition = "2018"
authors = ["SamGinzburg <ginzburg.sam@gmail.com>", "Benjamin Kuykendall <brk@princeton.edu>"]

[lib]
name = "sharedlib"
path = "src/lib/lib.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
clap = "2.32.0"
cursive = "0.11"
rand = "0.6.5"
tarpc = { version = "0.16.0", features = ["serde"] }
tarpc-bincode-transport = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
tokio = "0.1.18"
ring = { git = "https://github.com/kuykendall-benjamin/ring" }
lazy_static = "1.3.0"
