[package]
name = "project"
version = "0.1.0"
edition = "2018"
authors = ["SamGinzburg <ginzburg.sam@gmail.com>", "Benjamin Kuykendall <brk@princeton.edu>"]

[lib]
name = "sharedlib"
path = "src/lib/lib.rs"

[[bin]]
name = "setup"
path = "src/setup/main.rs"

[[bin]]
name = "head_server"
path = "src/head_server/main.rs"

[[bin]]
name = "intermediate_server"
path = "src/intermediate_server/main.rs"

[[bin]]
name = "deaddrop_server"
path = "src/deaddrop_server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "testclient"
path = "src/testclient/main.rs"

[dependencies]
clap = "2.32.0"
cursive = "0.11"
rand = "0.6.5"
tarpc = { version = "0.16.0", features = ["serde1"] }
tarpc-bincode-transport = "0.5.0"
serde = { version = "1.0.90", features = ["derive"] }
tokio = "0.1.18"
ring = { git = "https://github.com/kuykendall-benjamin/ring" }
lazy_static = "1.3.0"
futures-preview = { version = "0.3.0-alpha.14", features = ["compat"] }
futures-await-async-macro = "0.1.4"
tokio-async-await = "0.1.0"
tokio-threadpool = "0.1.14"
byteorder = "1.3.1"
rayon = "1.0.3"

